<resources>
    <string name="app_name">MyThirdAssign</string>
    <string name="sub">Sub</string>

    //Activity and Menu Strings

    <string name="add_subtract">Add and Subtract</string>
    <string name="random">Random #</string>
    <string name="title_activity_main_activity2">Random # </string>
    <string name="bar_add_subtract">Add/Sub</string>
    <string name="bar_random">Random</string>

    //Text Field Strings
    <string name="total">Your total is: </string>
    <string name="random_num">Your random number is: </string>
    <string name="total_Num">0</string>
    <string name="random_Value"> </string>

    //Button Strings
    <string name="btnAdd">Add</string>
    <string name="btnSub">Sub</string>
    <string name="btnRandom">Random Number</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="get">Get Random Value</string>
    <string name="btnSave">Save Random Number to Add/Sub</string>
</resources>