<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mythirdassign.RandomActivity">


    <TextView
        android:text="@string/random_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_random"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/text_random_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_random"
        android:layout_centerHorizontal="true"
        android:text="@string/random_Value"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/butRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/btnRandom" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:id="@+id/butSave"
        android:layout_below="@id/butRandom"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>