<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_vertical"
    android:layout_gravity="left"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AddSubActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:text="@string/btnAdd"
        android:id="@+id/butAdd"
        tools:ignore="Suspicious0dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/total_Num"
        android:id="@+id/text_total_num"
        tools:ignore="Suspicious0dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:text="@string/btnSub"
        android:id="@+id/butSub"
        tools:ignore="Suspicious0dp" />
</LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical">
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/get"
            android:id="@+id/butGet"
            />
    </LinearLayout>
</LinearLayout>



